--- a/gateway/src/main/resources/application-dev.yaml
+++ b/gateway/src/main/resources/application-dev.yaml
@@ -12,10 +12,15 @@ spring:
                 whitePathList:
                   - /api/short-link/admin/v1/user/login
                   - /api/short-link/admin/v1/user/has-username
-
+                  - /api/short-link/admin/v1/user/register
         - id: short-link-project
           uri: lb://short-link-project/api/short-link/**
           predicates:
             - Path=/api/short-link/**
           filters:
             - name: TokenValidate
+short-link:
+  token:
+    access-token-ttl: 300
+    refresh-token-ttl: 7200
+    secret-key: @v,:g-k-vE^8D`S%v0[&b'uNpXEV%NC}jlfW+Az_6!2"%T7whE'jB?l5Yi-vwqp'
