--- a/gateway/src/main/resources/application.yaml
+++ b/gateway/src/main/resources/application.yaml
@@ -4,14 +4,13 @@ spring:
   application:
     name: short-link-gateway
   profiles:
-    active: aggregation
-    # active: dev
+    active: dev
   data:
     redis:
-      host: 127.0.0.1
+      host: 192.168.150.102
       port: 6379
-      password: 123456
+      password:
   cloud:
     nacos:
       discovery:
-        server-addr: 127.0.0.1:8848
+        server-addr: 192.168.150.102:8848
