--- a/admin/src/main/resources/shardingsphere-config-dev.yaml
+++ b/admin/src/main/resources/shardingsphere-config-dev.yaml
@@ -15,11 +15,12 @@ rules:
           standard:
             shardingColumn: username
             shardingAlgorithmName: user_table_hash_mod
+
       t_group:
         actualDataNodes: ds_0.t_group_${0..1}
         tableStrategy:
           standard:
-            shardingColumn: username
+            shardingColumn: user_id
             shardingAlgorithmName: group_table_hash_mod
     shardingAlgorithms:
       user_table_hash_mod:
